force-app/main/default/objects/Deposit_Application__c/Deposit_Application__c.object-meta.xml
<CustomObject>
    <label>Deposit Application</label>
    <nameField>
        <label>Deposit Application Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deposit Applications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>