force-app/main/default/objects/Deposit_Application__c/fields/Deposit__c.field-meta.xml
<CustomField>
    <fullName>Deposit__c</fullName>
    <label>Deposit</label>
    <referenceTo>Deposit__c</referenceTo>
    <relationshipLabel>Deposit Applications</relationshipLabel>
    <relationshipName>Deposit_Deposit_Applications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>