force-app/main/default/objects/Deposit_Application__c/fields/Status__c.field-meta.xml
<CustomField>
  <fullName>Status__c</fullName>
  <label>Status</label>
  <type>Picklist</type>
  <valueSet>
    <valueSetDefinition>
      <sorted>true</sorted>
      <value><fullName>Planned</fullName><default>true</default><label>Planned</label></value>
      <value><fullName>Applied</fullName><default>false</default><label>Applied</label></value>
      <value><fullName>Voided</fullName><default>false</default><label>Voided</label></value>
    </valueSetDefinition>
  </valueSet>
</CustomField>